<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MusicActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:text="@string/ibu_kita_kartini"
        android:gravity="center"
        android:layout_weight="1"
        android:textColor="@color/primary_text"
        android:textSize="20dp"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:background="@color/red_material"
            android:onClick="playDoSound"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/do_c"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:background="@color/pink_material"
            android:onClick="playReSound"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/re_d"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:background="@color/purple_material"
            android:onClick="playMiSound"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/mi_e"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:background="@color/dep_purple_material"
            android:onClick="playFaSound"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fa_f"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:background="@color/indigo_material"
            android:onClick="playSolSound"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sol_g"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:background="@color/blue_material"
            android:onClick="playLaSound"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/la_a"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:background="@color/light_blue_material"
            android:onClick="playSiSound"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/si_b"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:background="@color/cyan_material"
            android:onClick="playDoDoSound"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/do_i_c"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>