<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReadingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/primary"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.85"
            android:animationCache="true"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="setNext"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewNext"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:contentDescription="@string/next"
                android:scaleType="centerInside"
                android:src="@drawable/ic_navigate_next"
                android:tint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:gravity="end">

            <ImageView
                android:id="@+id/star1ImageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/star"
                android:src="@drawable/ic_star"
                android:tint="@color/white" />

            <ImageView
                android:id="@+id/star2ImageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/star"
                android:src="@drawable/ic_star"
                android:tint="@color/white" />

            <ImageView
                android:id="@+id/star3ImageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/star"
                android:src="@drawable/ic_star"
                android:tint="@color/white" />

            <ImageView
                android:id="@+id/star4ImageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/star"
                android:src="@drawable/ic_star"
                android:tint="@color/white" />

            <ImageView
                android:id="@+id/star5ImageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/star"
                android:src="@drawable/ic_star"
                android:tint="@color/white" />

            <ImageView
                android:id="@+id/star6ImageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/star"
                android:src="@drawable/ic_star"
                android:tint="@color/white" />

            <ImageView
                android:id="@+id/star7ImageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/star"
                android:src="@drawable/ic_star"
                android:tint="@color/white" />

            <ImageView
                android:id="@+id/star8ImageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/star"
                android:src="@drawable/ic_star"
                android:tint="@color/white" />

            <ImageView
                android:id="@+id/star9ImageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/star"
                android:src="@drawable/ic_star"
                android:tint="@color/white" />

            <ImageView
                android:id="@+id/star10ImageView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/star"
                android:src="@drawable/ic_star"
                android:tint="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutRow1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layoutSpeak"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:animationCache="true"
            android:background="@color/primary"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewMic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/listening"
                android:scaleType="centerInside"
                android:src="@drawable/as_microphone"
                android:tint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCheck"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:background="@color/primary"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewCheck"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/check"
                android:scaleType="centerInside"
                android:src="@drawable/ic_check"
                android:tint="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewRead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/read"
        android:textColor="@color/primary_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/result"
        android:textColor="@color/primary_light"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>