<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutRow1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/layoutCalculation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/lime"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:onClick="showCalculationActivity"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewCalculation"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/calculation"
                        android:scaleType="centerInside"
                        android:src="@drawable/as_calculation"
                        android:tint="@color/white" />

                    <TextView
                        android:id="@+id/textViewCalculation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imageViewCalculation"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:text="@string/calculation"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutReading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/blue"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:onClick="showReadingActivity"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewReading"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/calculation"
                        android:scaleType="centerInside"
                        android:src="@drawable/as_reading"
                        android:tint="@color/white" />

                    <TextView
                        android:id="@+id/textViewReading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imageViewReading"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:text="@string/reading"
                        android:textAlignment="center" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutRow2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@id/layoutRow1">

                <LinearLayout
                    android:id="@+id/layoutListening"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/red"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:onClick="showListeningActivity"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewListening"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/listening"
                        android:scaleType="centerInside"
                        android:src="@drawable/as_listening"
                        android:tint="@color/white" />

                    <TextView
                        android:id="@+id/textViewListening"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:text="@string/listening"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutMusic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/yellow"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:onClick="showMusicActivity"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageViewMusic"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/music"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_music_note"
                        android:tint="@color/white" />

                    <TextView
                        android:id="@+id/textViewGame"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/music"
                        android:textAlignment="center" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutRow3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@id/layoutRow2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/blue_dark"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:onClick="showListeningActivity"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/listening"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_settings"
                        android:tint="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:text="@string/setting"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/purple_material"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/calculation"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_info"
                        android:tint="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:text="@string/info"
                        android:textAlignment="center" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>