<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListeningActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/primary"
        android:gravity="end">

        <ImageView
            android:id="@+id/star1ImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star"
            android:tint="@color/white" />

        <ImageView
            android:id="@+id/star2ImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star"
            android:tint="@color/white" />

        <ImageView
            android:id="@+id/star3ImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star"
            android:tint="@color/white" />

        <ImageView
            android:id="@+id/star4ImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star"
            android:tint="@color/white" />

        <ImageView
            android:id="@+id/star5ImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star"
            android:tint="@color/white" />

        <ImageView
            android:id="@+id/star6ImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star"
            android:tint="@color/white" />

        <ImageView
            android:id="@+id/star7ImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star"
            android:tint="@color/white" />

        <ImageView
            android:id="@+id/star8ImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star"
            android:tint="@color/white" />

        <ImageView
            android:id="@+id/star9ImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star"
            android:tint="@color/white" />

        <ImageView
            android:id="@+id/star10ImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/star"
            android:src="@drawable/ic_star"
            android:tint="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutRow1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layoutListening"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:animationCache="true"
            android:background="@color/primary"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="setSpeak"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewListening"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/listening"
                android:scaleType="centerInside"
                android:src="@drawable/as_listening"
                android:tint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutReading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:background="@color/primary"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="setAnswer"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewReading"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/check"
                android:scaleType="centerInside"
                android:src="@drawable/ic_check"
                android:tint="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/red_dark"
        android:textSize="20sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/editTextAnswer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/answer"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:labelFor="@id/editTextAnswer"
            android:text="@string/answer"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>